--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
-  <title>Orhanportaal</title>
+  <title>Orhanportaal – Praat met Neco</title>
 </head>
 <body style="font-family: sans-serif; text-align: center; padding: 40px;">
   <h1>Welkom op het Orhanportaal 👨‍👩‍👧‍👦</h1>
@@ -10,12 +10,14 @@
 
   <hr style="margin: 40px 0;">
 
-  <h2>🎤 Praat binnenkort met Necati!</h2>
-  <p>We zijn bezig met een leuke interactieve avatar die met je kan praten.</p>
+  <h2>🎤 Praat met Neco de avatar!</h2>
+  <iframe 
+    src="https://studio.inworld.ai/share/8bfc8475-3018-4847-9428-bd8c1f2e8656" 
+    width="100%" 
+    height="600px" 
+    style="border: none;">
+  </iframe>
 
-  <!-- Hier komt later de avatar in een iframe -->
-  <!-- <iframe src="..." width="100%" height="600px"></iframe> -->
-
-  <p style="margin-top: 40px;">Meer spelletjes en leuke dingen volgen binnenkort!</p>
+  <p style="margin-top: 40px;">Binnenkort komen er nog meer leuke spelletjes op deze pagina!</p>
 </body>
 </html>
