--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <hr style="margin: 40px 0;">
 
   <h2>🎤 Praat met Neco de avatar!</h2>
-  <iframe 
-    src="https://studio.inworld.ai/share/8bfc8475-3018-4847-9428-bd8c1f2e8656" 
-    width="100%" 
-    height="600px" 
-    style="border: none;">
-  </iframe>
+<p>Klik op de knop hieronder om met Neco te praten in een nieuw venster:</p>
+<a href="https://studio.inworld.ai/share/8bfc8475-3018-4847-9428-bd8c1f2e8656" target="_blank">
+  <button style="padding: 15px 30px; font-size: 18px; border-radius: 10px; background-color: #4CAF50; color: white; border: none; cursor: pointer;">
+    🎤 Start gesprek met Neco
+  </button>
+</a>
 
   <p style="margin-top: 40px;">Binnenkort komen er nog meer leuke spelletjes op deze pagina!</p>
 </body>
