--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
+
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Orhanportaal – Praat met Neco</title>
+  <title>Orhanportaal - Neco ile Konuş</title>
 </head>
 <body style="font-family: sans-serif; text-align: center; padding: 40px;">
-  <h1>Welkom op het Orhanportaal 👨‍👩‍👧‍👦</h1>
-  <p>Een digitale ontmoetingsplek voor spelletjes, humor en gezelligheid!</p>
+  <h1>Orhanportaal 👨‍👩‍👧‍👦</h1>
+  <p>Merhaba! Ben Neco. Aşağıya bir şey yaz, sana sesli cevap vereyim!</p>
 
-  <hr style="margin: 40px 0;">
+  <img src="https://cdn.pixabay.com/photo/2021/09/23/05/25/cat-6648659_960_720.png" alt="Neco" width="200" style="margin-bottom: 20px;">
 
-  <h2>🎤 Praat met Neco de avatar!</h2>
-<p>Klik op de knop hieronder om met Neco te praten in een nieuw venster:</p>
-<a href="https://studio.inworld.ai/share/8bfc8475-3018-4847-9428-bd8c1f2e8656" target="_blank">
-  <button style="padding: 15px 30px; font-size: 18px; border-radius: 10px; background-color: #4CAF50; color: white; border: none; cursor: pointer;">
-    🎤 Start gesprek met Neco
-  </button>
-</a>
+  <br>
+  <input type="text" id="textInput" placeholder="Buraya yaz..." style="padding: 10px; width: 300px; font-size: 16px;">
+  <button onclick="speakText()" style="padding: 10px 20px; font-size: 16px; margin-left: 10px;">🔊 Neco Konuşsun</button>
 
-  <p style="margin-top: 40px;">Binnenkort komen er nog meer leuke spelletjes op deze pagina!</p>
+  <script>
+    function speakText() {
+      const text = document.getElementById('textInput').value;
+      const utterance = new SpeechSynthesisUtterance(text);
+      utterance.lang = 'tr-TR';
+      utterance.pitch = 1.2;
+      utterance.rate = 1;
+      speechSynthesis.speak(utterance);
+    }
+  </script>
+
+  <p style="margin-top: 40px;">Daha fazla oyun ve eğlence yakında burada olacak!</p>
 </body>
 </html>
