--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>Orhanportaal 👨‍👩‍👧‍👦</h1>
   <p>Merhaba! Ben Neco. Aşağıya bir şey yaz, sana sesli cevap vereyim!</p>
 
-  <img src="https://cdn.pixabay.com/photo/2021/09/23/05/25/cat-6648659_960_720.png" alt="Neco" width="200" style="margin-bottom: 20px;">
+ <img src="neco.png" alt="Neco" width="200">
 
   <br>
   <input type="text" id="textInput" placeholder="Buraya yaz..." style="padding: 10px; width: 300px; font-size: 16px;">
