--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>Orhanportaal 👨‍👩‍👧‍👦</h1>
   <p>Merhaba! Ben Neco. Aşağıya bir şey yaz, sana sesli cevap vereyim!</p>
 
- <img src="neco.png" alt="Neco" width="200">
+ <img src="https://raw.githubusercontent.com/forhan8/orhanportaal/main/neco.png" alt="Neco" width="200">
 
   <br>
   <input type="text" id="textInput" placeholder="Buraya yaz..." style="padding: 10px; width: 300px; font-size: 16px;">
