--- a/index.html
+++ b/index.html
@@ -7,18 +7,33 @@
 </head>
 <body style="font-family: sans-serif; text-align: center; padding: 40px;">
   <h1>Orhanportaal 👨‍👩‍👧‍👦</h1>
-  <p>Merhaba! Ben Neco. Aşağıya bir şey yaz, sana sesli cevap vereyim!</p>
+  <p>Merhaba! Ben Neco Sarıbıyık. Aşağıya bir şey yaz veya bir mizaçlı butona tıkla!</p>
 
- <img src="https://raw.githubusercontent.com/forhan8/orhanportaal/main/neco_saribiyik_cropped.png" alt="Neco" width="200">
+  <img src="neco_saribiyik_cropped.png" alt="Neco Sarıbıyık" width="200" style="margin-bottom: 20px;">
 
   <br>
   <input type="text" id="textInput" placeholder="Buraya yaz..." style="padding: 10px; width: 300px; font-size: 16px;">
   <button onclick="speakText()" style="padding: 10px 20px; font-size: 16px; margin-left: 10px;">🔊 Neco Konuşsun</button>
 
+  <br><br>
+
+  <button onclick="vertelMop()" style="padding: 10px 20px; font-size: 16px; background-color: #f7c948; border: none; border-radius: 8px; cursor: pointer;">
+    😂 Bir şaka anlat
+  </button>
+
   <script>
     function speakText() {
       const text = document.getElementById('textInput').value;
       const utterance = new SpeechSynthesisUtterance(text);
+      utterance.lang = 'tr-TR';
+      utterance.pitch = 1.2;
+      utterance.rate = 1;
+      speechSynthesis.speak(utterance);
+    }
+
+    function vertelMop() {
+      const joke = "Bir inek, bilgisayar almak istemiş... Çünkü internette 'mooo' bakmak istiyormuş!";
+      const utterance = new SpeechSynthesisUtterance(joke);
       utterance.lang = 'tr-TR';
       utterance.pitch = 1.2;
       utterance.rate = 1;
