--- a/index.html
+++ b/index.html
@@ -3,44 +3,61 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Orhanportaal - Neco ile Konuş</title>
+  <title>Neco Sarıbıyık - AI ile Konuş</title>
 </head>
 <body style="font-family: sans-serif; text-align: center; padding: 40px;">
   <h1>Orhanportaal 👨‍👩‍👧‍👦</h1>
-  <p>Merhaba! Ben Neco Sarıbıyık. Aşağıya bir şey yaz veya bir mizaçlı butona tıkla!</p>
+  <p>Ben Neco Sarıbıyık! Ne istersen sor, sana cevap vereyim 🧠</p>
 
   <img src="neco_saribiyik_cropped.png" alt="Neco Sarıbıyık" width="200" style="margin-bottom: 20px;">
 
   <br>
-  <input type="text" id="textInput" placeholder="Buraya yaz..." style="padding: 10px; width: 300px; font-size: 16px;">
-  <button onclick="speakText()" style="padding: 10px 20px; font-size: 16px; margin-left: 10px;">🔊 Neco Konuşsun</button>
+  <input type="text" id="userInput" placeholder="Bana bir şey sor..." style="padding: 10px; width: 300px; font-size: 16px;">
+  <button onclick="askGPT()" style="padding: 10px 20px; font-size: 16px; margin-left: 10px;">🧠 Cevapla</button>
 
-  <br><br>
-
-  <button onclick="vertelMop()" style="padding: 10px 20px; font-size: 16px; background-color: #f7c948; border: none; border-radius: 8px; cursor: pointer;">
-    😂 Bir şaka anlat
-  </button>
+  <p id="response" style="margin-top: 30px; font-size: 18px;"></p>
 
   <script>
-    function speakText() {
-      const text = document.getElementById('textInput').value;
-      const utterance = new SpeechSynthesisUtterance(text);
-      utterance.lang = 'tr-TR';
-      utterance.pitch = 1.2;
-      utterance.rate = 1;
-      speechSynthesis.speak(utterance);
-    }
+    async function askGPT() {
+      const input = document.getElementById("userInput").value;
+      const responseBox = document.getElementById("response");
+      responseBox.innerText = "Bekleniyor...";
 
-    function vertelMop() {
-      const joke = "Bir inek, bilgisayar almak istemiş... Çünkü internette 'mooo' bakmak istiyormuş!";
-      const utterance = new SpeechSynthesisUtterance(joke);
-      utterance.lang = 'tr-TR';
-      utterance.pitch = 1.2;
-      utterance.rate = 1;
-      speechSynthesis.speak(utterance);
+      const apiKey = "YOUR_OPENAI_API_KEY"; // <-- hier vul je jouw eigen key in
+      const endpoint = "https://api.openai.com/v1/chat/completions";
+
+      try {
+        const res = await fetch(endpoint, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "Authorization": `Bearer ${apiKey}`
+          },
+          body: JSON.stringify({
+            model: "gpt-3.5-turbo",
+            messages: [{ role: "user", content: input }],
+            temperature: 0.7,
+            max_tokens: 100
+          })
+        });
+
+        const data = await res.json();
+        const reply = data.choices[0].message.content;
+        responseBox.innerText = reply;
+
+        // Spreek het antwoord uit
+        const utterance = new SpeechSynthesisUtterance(reply);
+        utterance.lang = 'tr-TR';
+        utterance.pitch = 1.2;
+        utterance.rate = 1;
+        speechSynthesis.speak(utterance);
+      } catch (error) {
+        responseBox.innerText = "Bir hata oluştu. Lütfen tekrar deneyin.";
+        console.error(error);
+      }
     }
   </script>
 
-  <p style="margin-top: 40px;">Daha fazla oyun ve eğlence yakında burada olacak!</p>
+  <p style="margin-top: 40px;">Daha fazla eğlence yakında burada olacak!</p>
 </body>
 </html>
