--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       const responseBox = document.getElementById("response");
       responseBox.innerText = "Bekleniyor...";
 
-      const apiKey = "YOUR_OPENAI_API_KEY"; // <-- hier vul je jouw eigen key in
+      const apiKey = "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"; // <-- hier vul je jouw eigen key in
       const endpoint = "https://api.openai.com/v1/chat/completions";
 
       try {
