--- a/kinderen.html
+++ b/kinderen.html
@@ -2,42 +2,62 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Orhanportaal - Çocuklar</title>
+  <title>Orhanportaal - Neco Sarıbıyık</title>
   <style>
     body {
-      font-family: Comic Sans MS, sans-serif;
+      font-family: Arial, sans-serif;
       text-align: center;
       padding: 40px;
-      background-color: #fffbea;
+      background-color: #fff3cd;
     }
-    h1 {
-      font-size: 32px;
-      color: #ff6f61;
-    }
-    .avatar {
-      margin-top: 20px;
+    img {
+      width: 200px;
       margin-bottom: 20px;
     }
     input, button {
       padding: 10px;
       font-size: 16px;
       margin: 10px;
-      border-radius: 10px;
-    }
-    button {
-      background-color: #ffd700;
-      border: none;
-      cursor: pointer;
-    }
-    #greeting {
-      margin-top: 20px;
-      font-size: 20px;
-      color: #444;
     }
   </style>
 </head>
 <body>
+  <h1>👧 Neco Sarıbıyık ile Konuş</h1>
+  <p>Ben Neco! Ne istersen yaz, sana cevap vereyim.</p>
 
-  <h1>Merhaba! Ben Neco Sarıbıyık 🐻</h1>
-  <div class="avatar">
-    <img src="https://raw.githubusercontent.com/forhan8/orhanportaal/main/neco_saribiyik_cropped
+  <img src="https://raw.githubusercontent.com/forhan8/orhanportaal/main/neco_saribiyik_cropped.png" alt="Neco Sarıbıyık">
+
+  <br>
+  <input type="text" id="userInput" placeholder="Bana bir şey sor...">
+  <button onclick="askGPT()">🧠 Cevapla</button>
+
+  <p id="response" style="margin-top: 30px; font-size: 18px;"></p>
+
+  <script>
+    async function askGPT() {
+      const input = document.getElementById("userInput").value;
+      const responseBox = document.getElementById("response");
+      responseBox.innerText = "Bekleniyor...";
+
+      try {
+        const res = await fetch("http://127.0.0.1:5000/api/ask", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ message: input })
+        });
+        const data = await res.json();
+        const reply = data.reply;
+        responseBox.innerText = reply;
+
+        const utterance = new SpeechSynthesisUtterance(reply);
+        utterance.lang = 'tr-TR';
+        utterance.pitch = 1.2;
+        utterance.rate = 1;
+        speechSynthesis.speak(utterance);
+      } catch (err) {
+        responseBox.innerText = "Bir hata oluştu. 😕";
+      }
+    }
+  </script>
+</body>
+</html>
