--- a/kinderen.html
+++ b/kinderen.html
@@ -1,64 +1,107 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <title>Neco Sarıbıyık - AI ile Konuş</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="icon" type="image/png" href="/neco.png">
-  <meta name="theme-color" content="#ffffff">
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/service-worker.js')
-        .then(() => console.log("✅ Service worker geregistreerd"))
-        .catch(err => console.error("❌ Service worker fout:", err));
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Neco Sarıbıyık - Çocuklar</title>
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#ffffff" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
     }
-  </script>
+    img {
+      max-width: 200px;
+      border-radius: 50%;
+    }
+    #chat {
+      margin-top: 20px;
+    }
+    input, button {
+      padding: 10px;
+      font-size: 1em;
+    }
+    #messages {
+      margin-top: 20px;
+      text-align: left;
+      max-width: 500px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .message {
+      padding: 8px;
+      border-radius: 5px;
+      margin-bottom: 5px;
+    }
+    .user {
+      background-color: #d1e7dd;
+    }
+    .bot {
+      background-color: #f8d7da;
+    }
+  </style>
 </head>
-<body style="font-family: sans-serif; text-align: center; padding: 40px;">
-  <h1>👧 Neco Sarıbıyık</h1>
-  <p>Merhaba! Ben Neco. Bana bir şey yaz, sana cevap vereyim 🧠</p>
+<body>
+  <h1>👋 Merhaba! Ben Neco Sarıbıyık</h1>
+  <img src="neco_clean.png" alt="Neco Sarıbıyık" />
+  
+  <div id="chat">
+    <input type="text" id="userInput" placeholder="Bana bir şey sor..." />
+    <button onclick="sendMessage()">🧠 Cevapla</button>
+  </div>
 
-  <img src="neco.png" alt="Neco Sarıbıyık" width="200" style="margin-bottom: 20px;">
-
-  <br>
-  <input type="text" id="userInput" placeholder="Bana bir şey sor..." style="padding: 10px; width: 300px; font-size: 16px;">
-  <button onclick="askGPT()" style="padding: 10px 20px; font-size: 16px; margin-left: 10px;">🧠 Cevapla</button>
-
-  <p id="response" style="margin-top: 30px; font-size: 18px;"></p>
+  <div id="messages"></div>
 
   <script>
-    async function askGPT() {
-      const input = document.getElementById("userInput").value;
-      const responseBox = document.getElementById("response");
-      responseBox.innerText = "Bekleniyor...";
+    // Backend URL automatisch kiezen op basis van omgeving
+    const BACKEND =
+      (location.hostname === "localhost" || location.hostname === "127.0.0.1" || location.hostname.startsWith("192.168."))
+        ? "http://" + location.hostname + ":5000"
+        : "https://JOUW-PROD-BACKEND-DOMAIN"; // <-- hier later jouw echte backend URL
+
+    async function sendMessage() {
+      const input = document.getElementById("userInput");
+      const message = input.value.trim();
+      if (!message) return;
+
+      addMessage("user", message);
+      input.value = "";
 
       try {
-        const res = await fetch("http://localhost:5000/api/ask", {
+        const res = await fetch(`${BACKEND}/api/ask`, {
           method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ message: input })
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ message })
         });
 
-        const data = await res.json();
-        const reply = data.reply;
-        responseBox.innerText = reply;
+        if (!res.ok) throw new Error("Serverfout: " + res.status);
 
-        // Spreek het antwoord uit in het Turks
-        const utterance = new SpeechSynthesisUtterance(reply);
-        utterance.lang = 'tr-TR';
-        utterance.pitch = 1.2;
-        utterance.rate = 1;
-        speechSynthesis.speak(utterance);
-      } catch (error) {
-        responseBox.innerText = "Bir hata oluştu. Lütfen tekrar deneyin.";
-        console.error(error);
+        const data = await res.json();
+        addMessage("bot", data.reply || "(Geen antwoord ontvangen)");
+      } catch (err) {
+        console.error(err);
+        addMessage("bot", "❌ Er ging iets mis bij het ophalen van antwoord.");
+      }
+    }
+
+    function addMessage(sender, text) {
+      const div = document.createElement("div");
+      div.classList.add("message", sender);
+      div.textContent = text;
+      document.getElementById("messages").appendChild(div);
+    }
+
+    // Alleen service worker registreren buiten dev
+    if (!location.hostname.includes("localhost") && !location.hostname.startsWith("192.168.")) {
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("service-worker.js")
+          .then(() => console.log("✅ Service Worker geregistreerd"))
+          .catch(err => console.error("SW registratie mislukt", err));
       }
     }
   </script>
-
-  <p style="margin-top: 40px;">📱 Bu sayfayı uygulama olarak kaydedebilirsin!</p>
 </body>
 </html>
